actualizacion imagenes responsive

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </nav>
         <!-- FIN NAVEGACION-->
-        <!--TITULO-SUBTITULO-IMAGEN PRINCIPAL- BUSCADOR-->
+        <!--TITULO-SUBTITULO- PRINCIPAL- BUSCADOR-->
 
     </header>
 
@@ -78,7 +78,7 @@
                     de manera rápida, segura y confiable</p>
             </div>
             <div class="col-md-6">
-                <img class="imagen-principal" src="./IMAGES/imagen-principal.png" alt="">
+                <img class="imagen-principal" src="./IMAGES/imagen-principal.png" alt="imagen principal">
             </div>
         </div>
         <form class="form-inline my-2 my-lg-0 buscador">
@@ -192,10 +192,10 @@
         </div>
         <div class="nosotros">
             <div class="row nosotros">
-                <div class="col-md-3"> <img src="./IMAGES/soporte.png" alt=""></div>
-                <div class="col-md-3"> <img src="./IMAGES/seguimiento.png" alt=""></div>
-                <div class="col-md-3"> <img src="./IMAGES/cuidamos tu dinero.png" alt=""></div>
-                <div class="col-md-3"> <img src="./IMAGES/opiniones.png" alt=""></div>
+                <div class="col-md-3"> <img src="./IMAGES/soporte.png" alt="imagen soporte"></div>
+                <div class="col-md-3"> <img src="./IMAGES/seguimiento.png" alt="imagen seguimiento"></div>
+                <div class="col-md-3"> <img src="./IMAGES/cuidamos tu dinero.png" alt="imagen cuidamos tu dinero"></div>
+                <div class="col-md-3"> <img src="./IMAGES/opiniones.png" alt="imagenes opiniones"></div>
             </div>
         </div>
     </section>
@@ -215,15 +215,7 @@
 
         <!-- Footer Links -->
         <div class="container text-center text-md-left">
-            <div class="descarga">
-                <h3 class="app">Descarga nuestra app!</h3>
-
-                <div class="imagen-descarga">
-
-                    <img class="imagen-celular " src="./IMAGES/Screenshot_2020-09-13 Company, flat web illustrations(5) 1.png" alt="imagen ilustracion descargar app">
-                    <img class="imagen-download " src="./IMAGES/donwload.png" alt="dercargar app imagen">
-                </div>
-            </div>
+            
 
             <!-- Grid row -->
             <div class="row margen">
@@ -242,10 +234,10 @@
                             <a href="#!"><img src="./IMAGES/icon-linkedin.png" alt="icon-linkedin"></a>
                         </li>
                         <li>
-                            <a href="#!"><img src="./IMAGES/icon-twitter.png" alt="/"></a>
+                            <a href="#!"><img src="./IMAGES/icon-twitter.png" alt="twitter"></a>
                         </li>
                         <li>
-                            <a href="#!"><img src="./IMAGES/icon-slack.png" alt="/"></a>
+                            <a href="#!"><img src="./IMAGES/icon-slack.png" alt="slack"></a>
                         </li>
                     </ul>
 
