--- a/busqueda.html
+++ b/busqueda.html
@@ -59,7 +59,7 @@
         </nav>
     </header>
     <!-- FIN NAVEGACION-->
-    <section class="container container-dos">
+    <section class="container container-dos menu-navegacion ">
         <ul class="nav nav-tabs">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -138,9 +138,9 @@
         </ul>
     </section>
 
-    <main class="container container-dos">
+    <main class="container container-dos ">
         <div class="row row-2 row-cols-md-2 cols-2">
-            <div class="col mb-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators" class="carousel slide">
                         <ol class="carousel-indicators">
@@ -150,13 +150,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active card">
-                                <img src="./IMAGES/room.png" class="d-block w-100" alt="bedroom1">
+                                <img src="./IMAGES/room.png" class="d-block w-100 carousel-imagen" alt="bedroom1">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/kitchen.png" class="d-block w-100" alt="kitchen1">
+                                <img src="./IMAGES/kitchen.png" class="d-block w-100 carousel-imagen" alt="kitchen1">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/bathroom.png" class="d-block w-100" alt="bathroom1">
+                                <img src="./IMAGES/bathroom.png" class="d-block w-100 carousel-imagen" alt="bathroom1">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -178,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators-2" class="carousel slide">
                         <ol class="carousel-indicators">
@@ -188,13 +188,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./IMAGES/bedroom2.png" class="d-block w-100" alt="bedroom2">
+                                <img src="./IMAGES/bedroom2.png" class="d-block w-100 carousel-imagen" alt="bedroom2">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/kitchen2.jpg" class="d-block w-100" alt="kitchen2">
+                                <img src="./IMAGES/kitchen2.jpg" class="d-block w-100 carousel-imagen" alt="kitchen2">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/bathroom2.jpg" class="d-block w-100" alt="bathroom2">
+                                <img src="./IMAGES/bathroom2.jpg" class="d-block w-100 carousel-imagen" alt="bathroom2">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators-2" role="button"
@@ -216,7 +216,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators-3" class="carousel slide">
                         <ol class="carousel-indicators">
@@ -226,13 +226,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./IMAGES/bedroom3.jpg" class="d-block w-100" alt="bedroom3">
+                                <img src="./IMAGES/bedroom3.jpg" class="d-block w-100 carousel-imagen" alt="bedroom3">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/kitchen3.jpg" class="d-block w-100" alt="kitchen3">
+                                <img src="./IMAGES/kitchen3.jpg" class="d-block w-100 carousel-imagen" alt="kitchen3">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/bathroom3.jpg" class="d-block w-100" alt="bathroom3">
+                                <img src="./IMAGES/bathroom3.jpg" class="d-block w-100 carousel-imagen" alt="bathroom3">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators-3" role="button"
@@ -254,7 +254,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators-4" class="carousel slide">
                         <ol class="carousel-indicators">
@@ -264,13 +264,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./IMAGES/bedroom.jpg" class="d-block w-100" alt="bedroom4">
+                                <img src="./IMAGES/bedroom.jpg" class="d-block w-100 carousel-imagen" alt="bedroom4">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/kitchen4.jpg" class="d-block w-100" alt="kitchen4">
+                                <img src="./IMAGES/kitchen4.jpg" class="d-block w-100 carousel-imagen" alt="kitchen4">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/bathroom4.jpg" class="d-block w-100" alt="bathroom4">
+                                <img src="./IMAGES/bathroom4.jpg" class="d-block w-100 carousel-imagen" alt="bathroom4">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators-4" role="button"
@@ -292,7 +292,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators-5" class="carousel slide">
                         <ol class="carousel-indicators">
@@ -302,13 +302,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./IMAGES/bedroom 5.png" class="d-block w-100" alt="bedroom5">
+                                <img src="./IMAGES/bedroom 5.png" class="d-block w-100 carousel-imagen" alt="bedroom5">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/kitchen5.jpg" class="d-block w-100" alt="kitchen5">
+                                <img src="./IMAGES/kitchen5.jpg" class="d-block w-100 carousel-imagen" alt="kitchen5">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/bathroom5.jpg" class="d-block w-100" alt="bathroom5">
+                                <img src="./IMAGES/bathroom5.jpg" class="d-block w-100 carousel-imagen" alt="bathroom5">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators-5" role="button"
@@ -330,7 +330,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators-6" class="carousel slide">
                         <ol class="carousel-indicators">
@@ -340,13 +340,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./IMAGES/bedroom6.png" class="d-block w-100" alt="bedroom6">
+                                <img src="./IMAGES/bedroom6.png" class="d-block w-100 carousel-imagen" alt="bedroom6">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/kitchen6.jpg" class="d-block w-100" alt="kitchen6">
+                                <img src="./IMAGES/kitchen6.jpg" class="d-block w-100 carousel-imagen" alt="kitchen6">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/bathroom6.jpg" class="d-block w-100" alt="bathroom6">
+                                <img src="./IMAGES/bathroom6.jpg" class="d-block w-100 carousel-imagen" alt="bathroom6">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators-6" role="button"
@@ -368,7 +368,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators-7" class="carousel slide">
                         <ol class="carousel-indicators">
@@ -378,13 +378,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./IMAGES/bedroom7.png" class="d-block w-100" alt="bedroom7">
+                                <img src="./IMAGES/bedroom7.png" class="d-block w-100 carousel-imagen" alt="bedroom7">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/kitchen7.jpg" class="d-block w-100" alt="kitchen7">
+                                <img src="./IMAGES/kitchen7.jpg" class="d-block w-100 carousel-imagen" alt="kitchen7">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/bathroom7.jpg" class="d-block w-100" alt="bathroom7">
+                                <img src="./IMAGES/bathroom7.jpg" class="d-block w-100 carousel-imagen" alt="bathroom7">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators-7" role="button"
@@ -406,7 +406,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators-8" class="carousel slide">
                         <ol class="carousel-indicators">
@@ -416,13 +416,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./IMAGES/bedroom8.png" class="d-block w-100" alt="bedroom8">
+                                <img src="./IMAGES/bedroom8.png" class="d-block w-100 carousel-imagen" alt="bedroom8">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/kitchen8.jpg" class="d-block w-100" alt="kitchen8">
+                                <img src="./IMAGES/kitchen8.jpg" class="d-block w-100 carousel-imagen" alt="kitchen8">
                             </div>
                             <div class="carousel-item">
-                                <img src="./IMAGES/bathroom8.jpg" class="d-block w-100" alt="bathroom8">
+                                <img src="./IMAGES/bathroom8.jpg" class="d-block w-100 carousel-imagen" alt="bathroom8">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators-8" role="button"
@@ -444,10 +444,11 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row row-2 cols-2">
+        
+        <div class="col">
             <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40275.757954828165!2d2.1430467032310685!3d41.38465085872697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a49816718e30e5%3A0x44b0fb3d4f47660a!2sBarcelona%2C%20Espa%C3%B1a!5e0!3m2!1ses-419!2sar!4v1603490507379!5m2!1ses-419!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
+    </div>
     </main>
 
 
