arreglo imagenes carousel busqueda.html

--- a/busqueda.html
+++ b/busqueda.html
@@ -142,7 +142,7 @@
         <div class="row row-2 row-cols-md-2 cols-2">
             <div class="col-sm-6">
                 <div class="card">
-                    <div id="carouselExampleIndicators" class="carousel slide">
+                    <div id="carouselExampleIndicators" class="carousel slide carousel-size">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -180,7 +180,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <div id="carouselExampleIndicators-2" class="carousel slide">
+                    <div id="carouselExampleIndicators-2" class="carousel slide carousel-size">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -218,7 +218,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <div id="carouselExampleIndicators-3" class="carousel slide">
+                    <div id="carouselExampleIndicators-3" class="carousel slide carousel-size">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators-3" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -256,7 +256,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <div id="carouselExampleIndicators-4" class="carousel slide">
+                    <div id="carouselExampleIndicators-4" class="carousel slide carousel-size">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators-4" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators-4" data-slide-to="1"></li>
@@ -294,7 +294,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <div id="carouselExampleIndicators-5" class="carousel slide">
+                    <div id="carouselExampleIndicators-5" class="carousel slide carousel-size">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators-5" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators-5" data-slide-to="1"></li>
@@ -332,7 +332,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <div id="carouselExampleIndicators-6" class="carousel slide">
+                    <div id="carouselExampleIndicators-6" class="carousel slide carousel-size">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators-6" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators-6" data-slide-to="1"></li>
@@ -370,7 +370,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <div id="carouselExampleIndicators-7" class="carousel slide">
+                    <div id="carouselExampleIndicators-7" class="carousel slide carousel-size">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators-7" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators-7" data-slide-to="1"></li>
@@ -408,7 +408,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <div id="carouselExampleIndicators-8" class="carousel slide">
+                    <div id="carouselExampleIndicators-8" class="carousel slide carousel-size">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators-8" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators-8" data-slide-to="1"></li>
