--- a/busqueda.html
+++ b/busqueda.html
@@ -141,7 +141,7 @@
     </section>
 
     <main class="container container-dos">
-        <div class="row row-2 row-cols-md-2 cols-2 alineacion">
+        <div class="row row-2 row-size-md cols-2 alineacion">
             <div class="col-sm-6">
                 <div class="card">
                     <div id="carouselExampleIndicators" class="carousel slide carousel-size">
@@ -175,8 +175,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Habitación doble</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"> Privada <br>
+                            Habitación con buena iluminación <br>500 Euros x mes</p>
                     </div>
                 </div>
             </div>
@@ -213,8 +213,9 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Habitación doble iluminada</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"> Privada <br>
+                            Hermosa habitación en zona céntrica <br>500 Euros x mes
+                        </p>
                     </div>
                 </div>
             </div>
@@ -251,8 +252,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Habitación doble</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"> Privada <br>
+                            Habitación para estudiante <br>500 Euros x mes</p>
                     </div>
                 </div>
             </div>
@@ -289,8 +290,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Habitación individual</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"> Privada <br>
+                            Habitación individual bien iluminada <br>500 Euros x mes</p>
                     </div>
                 </div>
             </div>
@@ -327,8 +328,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Habitación doble</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"> Privada <br>
+                            Habitación con baño privado <br>500 Euros x mes</p>
                     </div>
                 </div>
             </div>
@@ -365,8 +366,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Habitación doble</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"> Privada <br>
+                            Habitación cerca de la playa <br>500 Euros x mes</p>
                     </div>
                 </div>
             </div>
@@ -403,8 +404,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Habitación doble</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"> Privada <br>
+                            Habitación con balcón <br>500 Euros x mes</p>
                     </div>
                 </div>
             </div>
@@ -441,8 +442,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Habitación doble con baño</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"> Privada <br>
+                            Enorme habitación con baño privado <br>500 Euros x mes </p>
                     </div>
                 </div>
             </div>
