--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
 
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control mr-sm-2" type="search" placeholder="¿Dónde te gustaría vivir?" aria-label="Search">
 
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><a
                             href="busqueda.html">Buscar</a></button>
@@ -83,12 +83,12 @@
         </div>
         <form class="form-inline my-2 my-lg-0 buscador">
            
-            <input class="form-control mr-sm-2" type="search" placeholder="Donde te gustaría vivir?"
+            <input class="form-control mr-sm-2" type="search" placeholder="¿Donde te gustaría vivir?"
                 aria-label="Search">
-            <input class="form-control mr-sm-2" type="search" placeholder="Desde cuando?" aria-label="Search">
+            <input class="form-control mr-sm-2" type="search" placeholder="¿Desde cuando?" aria-label="Search">
             <div class="input-group">
                 <select class="custom-select" id="inputGroupSelect04">
-                    <option selected>Choose...</option>
+                    <option selected>¿Cuantos meses?</option>
                     <option value="1">1-6 meses</option>
                     <option value="2">6-11 meses</option>
                     <option value="3">+12 meses</option>
@@ -192,10 +192,10 @@
         </div>
         <div class="nosotros">
             <div class="row nosotros">
-                <div class="col-md-3"> <img src="./IMAGES/soporte.png" alt="imagen soporte"></div>
-                <div class="col-md-3"> <img src="./IMAGES/seguimiento.png" alt="imagen seguimiento"></div>
-                <div class="col-md-3"> <img src="./IMAGES/cuidamos tu dinero.png" alt="imagen cuidamos tu dinero"></div>
-                <div class="col-md-3"> <img src="./IMAGES/opiniones.png" alt="imagenes opiniones"></div>
+                <div class="col-md-3"> <img src="./IMAGES/soporte1.png" alt="imagen soporte"></div>
+                <div class="col-md-3"> <img src="./IMAGES/soporte2.png" alt="imagen seguimiento"></div>
+                <div class="col-md-3"> <img src="./IMAGES/soporte 3.png" alt="imagen cuidamos tu dinero"></div>
+                <div class="col-md-3"> <img src="./IMAGES/soporte4.png" alt="imagenes opiniones"></div>
             </div>
         </div>
     </section>
@@ -251,7 +251,7 @@
                 <div class="col-md-12 mx-auto">
 
                     <!-- Links -->
-                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+                   
                     <div id="contactanos">
                         <h5>Write us!</h5>
                         <p>hello@roomerapp.com</p>
