--- a/registro.html
+++ b/registro.html
@@ -50,8 +50,8 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="search" placeholder="¿Dónde te gustaría vivir?" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
             </form>
         </div>
     </nav>
@@ -61,28 +61,28 @@
    <body id="myId"> 
     <section class="register-account"> 
           <div class="signform">      
-            <div class="left"><a href="#" style="float:right;margin-right:35px;font-size: 0.9em;" class="bts-a">Don't have an account? Sign up!</a>
+            <div class="left"><a href="#" style="float:right;margin-right:35px;font-size: 0.9em;" class="bts-a">¿No tienes cuenta? Regístrate</a>
               <div class="bts">
-                <a href="#" class="fblogin social"><i class="fa fa-facebook"></i><span>Sign in with Facebook</span></a>
-                 <a href="#" class="twlogin social"><i class="fa fa-twitter"></i><span>Sign in with Twitter</span></a>
-                <a href="#" class="gplogin social"><i class="fa fa-google-plus"></i><span>Sign in with Google</span></a>             
+                <a href="#" class="fblogin social"><i class="fa fa-facebook"></i><span>Inicia sesión con Facebook</span></a>
+                 <a href="#" class="twlogin social"><i class="fa fa-twitter"></i><span>Inicia sesión con Twitter</span></a>
+                <a href="#" class="gplogin social"><i class="fa fa-google-plus"></i><span>Inicia sesión con Google</span></a>             
               </div>
             </div>
             <div class="right">
                 <div class="headit">
-                  <h4>Login To Your Account</h4>
+                  <h4>Inicia sesión con tu cuenta</h4>
                 </div>
                 <div class="form">
                   <form class="login-form" id="login-form">
-                      <input type="text" placeholder="User Name"/>
-                      <input type="password" placeholder="Password"/>        
+                      <input type="text" placeholder="Nombre de Usuario"/>
+                      <input type="password" placeholder="Contraseña"/>        
                       <div class="boton-inicia">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
                         <a href="#arriba">
                           Inicia sesión                </a></button>
                     </div>   
                   </form>
-                  <input type="checkbox" id="remember" name="remember"><span style="color:#b6b6b6;font-size: 0.9em;"> Remember Me</span><a href="#">Forgot your password?</a>        
+                  <input type="checkbox" id="remember" name="remember"><span style="color:#b6b6b6;font-size: 0.9em;"> Recordar contraseña</span><a href="#">¿Olvidaste tu contraseña?</a>        
                 </div>
             </div>       
           </div>
