--- a/busqueda.html
+++ b/busqueda.html
@@ -27,7 +27,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse navbar-mobile" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#descubre">Descubre<span class="sr-only">(current)</span></a>
@@ -61,7 +61,7 @@
     </header>
     <!-- Fin Navegación-->
 
-    <!--Segunda navegación-->
+    <!--Navegacion de filtros-->
     <section class="container container-dos menu-navegacion ">
 
         <ul class="nav nav-tabs">
@@ -178,15 +178,15 @@
 
                 </div>
             </li>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><a
+            <button class="btn btn-outline-success my-2 my-sm-0 boton-enviar-busqueda" type="submit"><a
                 href="busqueda.html">Buscar</a></button>
         </ul>
     </section>
-    <!--Fin segunda barra de navegación-->
+    <!--Fin navegación de filtros-->
 
 
     <!--Comienzo cards-->
-    <main class="container container-dos">
+    <main class="container container-dos cards-habitaciones">
         <div class="row row-2 row-size-md cols-2 alineacion">
             <div class="col-sm-6">
                 <div class="card">
