--- a/busqueda.html
+++ b/busqueda.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse navbar-mobile" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#descubre">Descubre<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html" id="#descubre">Descubre<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#publica">Publica tu habitación</a>
@@ -41,20 +41,59 @@
                             Regístrate o Inicia sesión
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                            <form class="px-4 py-3">
+                                <div class="form-group">
+                                    <label for="exampleDropdownFormEmail1">Email</label>
+                                    <input type="email" class="form-control" id="exampleDropdownFormEmail1"
+                                        placeholder="email@example.com">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleDropdownFormPassword1">Contraseña</label>
+                                    <input type="password" class="form-control" id="exampleDropdownFormPassword1"
+                                        placeholder="Password">
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                                    <label class="form-check-label" for="dropdownCheck">
+                                        Recordar contraseña
+                                    </label>
+                                </div>
+
+                                <button type="submit" class="btn btn-outline-success my-2 my-sm-0 margin-arriba"><a
+                                        href="busqueda.html">Inicia Sesión</a>
+                                </button>
+
+                            </form>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">¿Eres nuevo? Regístrate</a>
+                            <a class="dropdown-item" href="#">¿Te olvidaste la contraseña?</a>
+
+                        </div>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contactanos">Contáctanos</a>
+                    </li>
+                    <!--
+                    <li class="nav-item dropdown-item profile-avatar">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img src="./IMAGES/profile avatar.svg" alt="avatar">
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="registro.html">Regístrate</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="inicio.html">Inicia sesión</a>
 
                         </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contactanos">Contáctanos</a>
-                    </li>
+                    -->
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Barcelona-España"
                         aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0 mr-2" type="submit">Buscar</button>
                 </form>
             </div>
         </nav>
@@ -112,10 +151,10 @@
                     aria-expanded="false">Disponibilidad</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item disponibilidad" href="#">Disponible actualmente</a>
-                  
-                   
+
+
                     <label class="start" for="start">A partir de:</label>
-                    <input  class="date" type="date" id="start" name="trip-start" value="2020-11-5" min="2020-11-01"
+                    <input class="date" type="date" id="start" name="trip-start" value="2020-11-5" min="2020-11-01"
                         max="2021-12-31">
 
                 </div>
@@ -157,14 +196,14 @@
                         <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios1"
                             value="option1" checked>
                         <label class="form-check-label" for="exampleRadios1">
-                          Habitación privada
+                            Habitación privada
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios2"
                             value="option2">
                         <label class="form-check-label" for="exampleRadios2">
-                         Habitación compartida
+                            Habitación compartida
                         </label>
                     </div>
                     <div class="form-check">
@@ -178,8 +217,9 @@
 
                 </div>
             </li>
+
             <button class="btn btn-outline-success my-2 my-sm-0 boton-enviar-busqueda" type="submit"><a
-                href="busqueda.html">Buscar</a></button>
+                    href="busqueda.html">Buscar</a></button>
         </ul>
     </section>
     <!--Fin navegación de filtros-->
