arreglo y agregado botones rrss

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Regístrate o Inicia sesión
                         </a>
+                        
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <form class="px-4 py-3">
@@ -67,7 +68,10 @@
                                 <button type="submit" class="btn btn-outline-success my-2 my-sm-0 margin-arriba"><a
                                         href="busqueda.html">Inicia Sesión</a>
                                 </button>
-
+                    
+                            <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Inicia sesión con 
+                                Google</button>
+                            <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Inicia sesión con Facebook</button>
                             </form>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">¿Eres nuevo? Regístrate</a>
