--- a/busqueda.html
+++ b/busqueda.html
@@ -63,7 +63,9 @@
                                 <button type="submit" class="btn btn-outline-success my-2 my-sm-0 margin-arriba"><a
                                         href="busqueda.html">Inicia Sesión</a>
                                 </button>
-
+                                <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Inicia sesión con 
+                                    Google</button>
+                                <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Inicia sesión con Facebook</button>
                             </form>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">¿Eres nuevo? Regístrate</a>
