--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             <a href="#!"> <img src="./IMAGES/icon-facebook.png" alt="icon-facebook"></a>
                         </li>
                         <li>
-                            <a href="#!"><img src="./IMAGES/icon-linkedin.png" alt="icon-linkedin"></a>
+                            <a href="https://www.linkedin.com/in/lucia-leon/"><img src="./IMAGES/icon-linkedin.png" alt="icon-linkedin"></a>
                         </li>
                         <li>
                             <a href="#!"><img src="./IMAGES/icon-twitter.png" alt="twitter"></a>
@@ -378,7 +378,7 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#"></a> Lucía León</a>
+            <a href="https://www.linkedin.com/in/lucia-leon/">Lucía León</a>
         </div>
         <!-- Copyright -->
 
