--- a/busqueda.html
+++ b/busqueda.html
@@ -134,7 +134,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                <a class="nav-link dropdown-toggle disponibilidad" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                     aria-expanded="false">Disponibilidad</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item disponibilidad" href="#">Disponible actualmente</a>
@@ -205,7 +205,7 @@
                 </div>
             </li>
 
-            <button class="btn btn-outline-success my-2 my-sm-0 boton-enviar-busqueda" type="submit"><a
+            <button class="btn btn-outline-success my-2 my-sm-0 boton-enviar-busqueda boton-busqueda" type="submit"><a
                     href="busqueda.html">Buscar</a></button>
         </ul>
     </section>
