--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             </form>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">¿Eres nuevo? Regístrate</a>
-                            <a class="dropdown-item" href="#">¿Te olvidaste la contraseña?</a>
+                            <a class="dropdown-item item-inicio" href="#">¿Te olvidaste la contraseña?</a>
 
                         </div>
                     </li>
@@ -140,7 +140,7 @@
             </div>
         </nav>
         <!-- FIN NAVEGACION-->
-        
+
         <!--TITULO-SUBTITULO- PRINCIPAL- BUSCADOR-->
 
     </header>
@@ -171,7 +171,7 @@
                 </select>
 
             </div>
-            <button class="btn btn-outline-success my-2 my-sm-0 boton-buscar" type="submit">
+            <button id="publica" class="btn btn-outline-success my-2 my-sm-0 boton-buscar" type="submit">
                 <a href="busqueda.html">Buscar</a> </button>
 
         </form>
@@ -182,14 +182,14 @@
         -->
     </section>
 
-    <main class="container contenido-principal">
-        <div id="buscar-habitacion" class="imagen-encuentra col-md-6">
+    <main class="container contenido-principal" >
+        <div class="imagen-encuentra col-md-6"  >
             <h2>Encuentra tu nueva <br> Habitación</h2>
             <a href="busqueda.html">
                 <img class="imagen-encuentra-1" src="./IMAGES/encuentra tu hab.png" alt="encuentra">
             </a>
         </div>
-        <div id="publica" class="imagen-publica col-md-6">
+        <div  class="imagen-publica col-md-6">
             <h2>Publica tu Habitación
             </h2>
             <img class="imagen-publica-1" src="./IMAGES/publica tu habitacion.png" alt="publica">
