--- a/busqueda.html
+++ b/busqueda.html
@@ -213,7 +213,7 @@
 
 
     <!--Comienzo cards-->
-    <main class="container container-dos cards-habitaciones">
+    <main class="container container-dos arreglo cards-habitaciones">
         <div class="row row-2 row-size-md cols-2 alineacion">
             <div class="col-sm-6">
                 <div class="card">
